--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="logo">AGENDA</div>
     <nav>
       <ul>
-        <li><a href="#">Início</a></li>
-        <li><a href="#">Calendário</a></li>
+        <li><a href="LoginPage.html">Início</a></li>
+        <li><a href="index.html">Calendário</a></li>
         <li><a href="#">Tarefas</a></li>
         <li><a href="#">Configurações</a></li>
       </ul>
