--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Inter:wght@100..900&family=Parkinsans:wght@300..800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
   <title>Agenda</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
   <script src="calendario.js"></script>
 
@@ -16,12 +19,14 @@
     <div class="logo">AGENDA</div>
     <nav>
       <ul>
-        <li><a href="LoginPage.html">Início</a></li>
+        <li><a href="#">Início</a></li>
         <li><a href="index.html">Calendário</a></li>
         <li><a href="#">Tarefas</a></li>
         <li><a href="#">Configurações</a></li>
       </ul>
     </nav>
+    <a class="login" href="LoginPage.html">Login</a>
+    <a href="javascript:void(0);" class="icon" onclick="toggleMenu()"> <i class="fa fa-bars"></i></a>
   </header>
   <main>
     <aside class="sidebar left">
