--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html"><img src="calendar.png" alt="Calendário">Calendário</a></li>
-                <li><a href="https://www.google.com.br/?hl=pt-BR"><img src="analysis.png" alt="Análises">Análises</a></li>
+                <li><a href="https://www.google.com.br/?hl=pt-BR"><img src="analysis.png" alt="Análises">ChatBot</a></li>
                 <li><a href="https://www.google.com.br/?hl=pt-BR"><img src="note.png" alt="Notificações">Notificações</a></li>
             </ul>
         </nav>
