--- a/paginas/index.html
+++ b/paginas/index.html
@@ -9,21 +9,23 @@
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js"></script>
   <title>Agenda</title>
   <link rel="stylesheet" href="style.css">
-  <script src="calendario.js" defer></script>
+  <script src="/scripts/calendario.js" defer></script>
 </head>
 <body>
   <header>
     <div class="nav-container">
         <nav>
             <ul class="nav-links">
-                <li><a href="index.html"><img src="calendar.png" alt="Calendário">Calendário</a></li>
-                <li><a href="https://www.google.com.br/?hl=pt-BR"><img src="analysis.png" alt="Análises">ChatBot</a></li>
-                <li><a href="https://www.google.com.br/?hl=pt-BR"><img src="note.png" alt="Notificações">Notificações</a></li>
+                <li><a href="index.html"><img src="/assets/calendar.png" alt="Calendário">Calendário</a></li>
+                <li><a href="https://www.google.com.br/?hl=pt-BR"><img src="/assets/analysis.png" alt="Análises">ChatBot</a></li>
+                <li><a href="https://www.google.com.br/?hl=pt-BR"><img src="/assets/note.png" alt="Notificações">Notificações</a></li>
+                <button id="logoutButton">Logout</button>
+
             </ul>
         </nav>
     </div>
     <div class="profile-icon">
-        <a href="#"><img src="user.png" alt="Perfil"></a>
+        <a href="#"><img src="/assets/user.png" alt="Perfil"></a>
     </div>
 </header>
   <main>
