--- a/paginas/chat.html
+++ b/paginas/chat.html
@@ -10,6 +10,7 @@
     <title>ChatBot</title>
     <link rel="stylesheet" href="chat.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
 </head>
 <body>
     <header>
